Continued building out resources