@@ -2,12 +2,14 @@ package io.craigmiller160.springbootstarter.topic;
 
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.IntStream;
 
 @Service
 public class TopicService {
 
-    private final List<Topic> topics = List.of(
+    private final List<Topic> topics = Arrays.asList(
             new Topic("spring", "Spring Framework", "Spring Framework Description"),
             new Topic("java", "Core Java", "Core Java Description"),
             new Topic("javascript", "JavaScript", "JavaScript Description")
@@ -15,6 +17,35 @@ public class TopicService {
 
     public List<Topic> getAllTopics() {
         return topics;
+    }
+
+    public Topic getTopic(String id) {
+        return topics.stream()
+                .filter(topic -> topic.getId().equals(id))
+                .findFirst()
+                .get();
+    }
+
+    public Topic addTopic(Topic topic) {
+        topics.add(topic);
+        return topic;
+    }
+
+    public Topic updateTopic(String id, Topic topic) {
+        int matchIndex = IntStream.range(0, topics.size())
+                .filter(index -> topics.get(index).getId().equals(id))
+                .findFirst()
+                .getAsInt();
+        topics.set(matchIndex, topic);
+        return topic;
+    }
+
+    public Topic deleteTopic(String id) {
+        int matchIndex = IntStream.range(0, topics.size())
+                .filter(index -> topics.get(index).getId().equals(id))
+                .findFirst()
+                .getAsInt();
+        return topics.remove(matchIndex);
     }
 
 }
